# haskellbook

./: .gitignore  README
ch1/: README
ch10/: README
ch10/src/: any.hs  data.hs  exercises.hs
ch11/: README
ch11/src/: btree.hs  dogs.hs  exercises.hs  toomany.hs  vehicles.hs
ch12/: README
ch12/src/: exercises.hs
ch13/: README
ch13/hangman/: hangman.cabal
ch13/hangman/src/: Main.hs
ch13/hello/: hello.cabal
ch13/hello/src/: DogsRule.hs  Hello.hs
ch13/src/: exercises.hs
ch14/: README
ch14/addition/: Addition.hs
ch14/exercises/: exercises.cabal
ch14/exercises/src/: Cipher.hs  UsingQuickCheck.hs  WordNumber.hs
ch14/exercises/test/: CipherTest.hs  UsingQuickCheckTest.hs  WordNumberTest.hs
ch14/hangman/: hangman.cabal
ch14/hangman/src/: Hangman.hs  Main.hs
ch14/hangman/test/: Main.hs
ch14/morse/: package.yaml
ch14/morse/src/: Main.hs  Morse.hs
ch14/morse/tests/: tests.hs
ch15/: README
ch15/exercises/: Madness.hs  Optional.hs
ch2/: README
ch2/src/: exercises.hs  functionWithLet.hs  functionWithWhere.hs  learn.hs  test.hs
ch3/: README
ch3/src/: exercises.hs  print1.hs  print2.hs  print3.hs  print3flipped.hs  rvrs.hs  topOrLocal.hs
ch4/: README
ch4/src/: exercises.hs  greetIfCool1.hs  greetIfCool2.hs  tupfunc.hs  tuples.hs
ch5/: README
ch5/src/: arith3broken.hs  curry.hs  determine.hs  exercises.hs
ch6/: README
ch6/src/: daysOfWeek.hs  exercises.hs  exercises6.hs  trivial.hs
ch7/: README
ch7/src/: arith2.hs  exercises.hs  greetIfCool3.hs  matchingTuples1.hs  penguins.hs  registeredUser1.hs  registeredUser2.hs
ch8/: README
ch8/src/: division.hs  exercises.hs  factorial.hs  fibonacci.hs  numbers.hs
ch9/: README
ch9/src/: exercises.hs  head.hs
exp/addition/: Addition.hs  addition.cabal
exp/addition/.stack-work/install/x86_64-osx/lts-9.20/8.0.2/flag-cache/: HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  QuickCheck-2.9.2-LvlomhGMxrFBkX1zwiWpQu  addition-0.1.0.0-HWx2cZ10ag27KQS3GW4Ym6  ansi-terminal-0.6.3.1-3RTqikoQf47ajVD9m8zgB  async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  hspec-2.4.4-Ct0Af2AzisB8bPqGMHHFvj  hspec-core-2.4.4-Ezb0jq4rRfBJWZtpolvs1E  hspec-discover-2.4.4-99Suq6sFZ1T6o4isjc43TZ  hspec-expectations-0.8.2-DujBeQFEMmfJJRLad7XQgd  primitive-0.6.2.0-4578caNkWQ54Gt1mxLF2Yh  quickcheck-io-0.2.0-4pLO1WRxoBW9gt8EnME0zS  random-1.1-9tceXaeYIMZ4JrKq20Egog  setenv-0.1.1.3-8dEhk6JWvlmCmVyBammSpu  stm-2.4.4.1-JQn4hNPyYjP5m9AcbI88Ve  tf-random-0.5-CJZw1ZWS5MOJlR60HqKEZL
exp/addition/.stack-work/install/x86_64-osx/lts-9.20/8.0.2/lib/x86_64-osx-ghc-8.0.2/addition-0.1.0.0-HWx2cZ10ag27KQS3GW4Ym6/: Addition.dyn_hi
exp/addition/.stack-work/install/x86_64-osx/lts-9.20/8.0.2/pkgdb/: addition-0.1.0.0-HWx2cZ10ag27KQS3GW4Ym6.conf  package.cache
lib/: binarytree.hs  cipher.hs
