name:                exercises
version:             0.1.0.0
homepage:            https://github.com/githubuser/exercises#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  build-depends:       base >= 4.7 && < 5
  exposed-modules:     WordNumber
                     , UsingQuickCheck
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite wordnumber
  type:                exitcode-stdio-1.0
  main-is:             WordNumberTest.hs
  hs-source-dirs:      test
  ghc-options:         -Wall -fno-warn-orphans
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , QuickCheck
                     , exercises
  default-language:    Haskell2010

test-suite using-quickcheck
  type:                exitcode-stdio-1.0
  main-is:             UsingQuickCheckTest.hs
  hs-source-dirs:      test
  ghc-options:         -Wall -fno-warn-orphans
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , QuickCheck
                     , exercises
  default-language:    Haskell2010
