name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
homepage:            Chris N Julie
license:             BSD3
license-file:        LICENSE
author:              Chris Allen and Julie Moronuki
maintainer:          haskellbook.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Hangman
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
                     , hspec
                     , QuickCheck
  hs-source-dirs:      src
  default-language:    Haskell2010

executable hangman
  main-is:             Main.hs
  ghc-options:         -Wall -fwarn-tabs
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
                     , hangman
                     , QuickCheck
  other-modules:       Hangman
  default-language:    Haskell2010


test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test
  ghc-options:         -Wall -fno-warn-orphans
  build-depends:       base >= 4.7 && < 5
                       , random
                       , split
                       , hangman
                       , hspec
                       , QuickCheck
  default-language:    Haskell2010
